fixing too big image for image-upload dialog

--- a/webapp/src/app/components/image-upload-dialog-content/image-upload-dialog-content.component.scss
+++ b/webapp/src/app/components/image-upload-dialog-content/image-upload-dialog-content.component.scss
@@ -8,3 +8,7 @@
   flex-direction: row-reverse;
 }
 
+image-cropper {
+  max-height: 400px
+}
+
